Adaptive displacement off-screen culling/dicing and camera shift. #69911

Closed
opened 2019-09-15 19:45:53 +02:00 by Paul R · 13 comments

System Information
Operating system: Suse Linux 15.0
Graphics card: NVidia GTX 560ti (official drivers)

Blender Version
Broken: 2.81 e2df789c48

Short description of error
Adjusting the camera's Shift X/Y values gives unexpected off-screen culling results and high memory use.

Exact steps for others to reproduce the error

note: a separate camera (Camera.001) is used to control the dicing as it better shows the issue, but the same applies with a single camera setup.

adaptive_displacement_camera_shift.blend

  • Open adaptive_displacement_camera_shift.blend
  • Render and note that the dicing is centred on the plane as expected
  • If Camera.001 is moved along X direction, the culling position changes as expected
  • But if the Camera.001 Shift X value is set to 0.800 - instead of the subdivided area shifting to the right, it expands out along the X axis. Ram usage is also high.

Examples:

  1. Camera.001 in original position (peak memory: 69.19M):
    adaptive_displacement_offscreen_culling_expected_centre.jpg

  2. Camera.001 moved along X axis to 4m units (peak memory: 36.03M):
    adaptive_displacement_offscreen_culling_move_x.jpg

  3. Camera.001 in original position but camera Shift X value set to 0.800 (peak memory: 137.00M):
    adaptive_displacement_offscreen_culling_actual_shift_x.jpg

Expected result for 3. would be for similar culling and memory usage as 2.

So it isn't currently possible to split a large render into smaller sections as a way to reduce RAM/VRAM usage, then stitch externally.

**System Information** Operating system: Suse Linux 15.0 Graphics card: NVidia GTX 560ti (official drivers) **Blender Version** Broken: 2.81 e2df789c4800 **Short description of error** Adjusting the camera's Shift X/Y values gives unexpected off-screen culling results and high memory use. **Exact steps for others to reproduce the error** note: a separate camera (Camera.001) is used to control the dicing as it better shows the issue, but the same applies with a single camera setup. [adaptive_displacement_camera_shift.blend](https://archive.blender.org/developer/F7748826/adaptive_displacement_camera_shift.blend) - Open adaptive_displacement_camera_shift.blend - Render and note that the dicing is centred on the plane as expected - If Camera.001 is moved along X direction, the culling position changes as expected - But if the Camera.001 Shift X value is set to 0.800 - instead of the subdivided area shifting to the right, it expands out along the X axis. Ram usage is also high. Examples: 1. Camera.001 in original position (peak memory: 69.19M): ![adaptive_displacement_offscreen_culling_expected_centre.jpg](https://archive.blender.org/developer/F7748829/adaptive_displacement_offscreen_culling_expected_centre.jpg) 2. Camera.001 moved along X axis to 4m units (peak memory: 36.03M): ![adaptive_displacement_offscreen_culling_move_x.jpg](https://archive.blender.org/developer/F7748831/adaptive_displacement_offscreen_culling_move_x.jpg) 3. Camera.001 in original position but camera Shift X value set to 0.800 (peak memory: 137.00M): ![adaptive_displacement_offscreen_culling_actual_shift_x.jpg](https://archive.blender.org/developer/F7748833/adaptive_displacement_offscreen_culling_actual_shift_x.jpg) Expected result for 3. would be for similar culling and memory usage as 2. So it isn't currently possible to split a large render into smaller sections as a way to reduce RAM/VRAM usage, then stitch externally.
Author

Added subscriber: @intracube

Added subscriber: @intracube

#82024 was marked as duplicate of this issue

#82024 was marked as duplicate of this issue

Added subscribers: @MaiLavelle, @mano-wii

Added subscribers: @MaiLavelle, @mano-wii

@MaiLavelle, I'm not sure if this involves adaptive render subdvision, but can you take a look?

@MaiLavelle, I'm not sure if this involves adaptive render subdvision, but can you take a look?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Did some digging, but spending too much time here.

This seems to be somewhat reversed, so Shift X is being used, it expands as @intracube , to add: if it is negative it shrinks...

I see it being used in QuadDice::eval_projected (rastertoworld takes shift X into account eventually), but not sure if this has to do with it
transform_perspective(&params.camera->rastertoworld, P);

Will confirm for now and have a look again later...

Did some digging, but spending too much time here. This seems to be somewhat reversed, so `Shift X` is being used, it expands as @intracube , to add: if it is negative it shrinks... I see it being used in `QuadDice::eval_projected` (rastertoworld takes shift X into account eventually), but not sure if this has to do with it `transform_perspective(&params.camera->rastertoworld, P);` Will confirm for now and have a look again later...
Author

Thanks for taking a look.

Similarly to the above; positive Shift Y values grow the subdivision region, negative areas shrink it.

A related issue;
Changing Output->Dimensions->Aspect also gives unexpected results. Setting Y to positive values causes the region to grow on both dimensions, but the expected result would be to only expand on the X dimension:
dimensions_aspect_Y_1_2_expected.jpg

Thanks for taking a look. Similarly to the above; positive `Shift Y` values grow the subdivision region, negative areas shrink it. A related issue; `Changing Output->Dimensions->Aspect` also gives unexpected results. Setting `Y` to positive values causes the region to grow on both dimensions, but the expected result would be to only expand on the `X` dimension: ![dimensions_aspect_Y_1_2_expected.jpg](https://archive.blender.org/developer/F8283447/dimensions_aspect_Y_1_2_expected.jpg)
Philipp Oeser changed title from Adaptive displacement off-screen culling and camera shift. to Adaptive displacement off-screen culling/dicing and camera shift. 2020-10-24 15:05:38 +02:00
Member

Added subscriber: @unwave

Added subscriber: @unwave
Philipp Oeser self-assigned this 2020-10-24 17:03:55 +02:00

This issue was referenced by blender/cycles@886c82e790

This issue was referenced by blender/cycles@886c82e790d4d3a1e80fee5827862e8f7e043f82

This issue was referenced by f76f48c3d3

This issue was referenced by f76f48c3d3eb3ac518fed158a0f17c7507604ca8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Hi, I missed the notification for this two years ago and just saw that it was resolved.

Have just checked and it now seems to be working as expected. Thanks for the patch!

Hi, I missed the notification for this two years ago and just saw that it was resolved. Have just checked and it now seems to be working as expected. Thanks for the patch!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69911
No description provided.